fix: social icons spacing

--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -18,14 +18,18 @@
     --multiplier: 1.3;
 }
 
+.gh-social-icons {
+    display: flex;
+    align-items: center;
+    gap: var(--head-nav-gap);
+}
+
 @media (max-width: 767px) {
     .is-head-open #gh-head .gh-head-actions {
         background-color: var(--background-color);
     }
 
     .is-head-open #gh-head .gh-social-icons {
-        display: flex;
-        flex-direction: row;
         justify-content: center;
         gap: 20px;
         width: 100%;
